# scitex-notification

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  scitex-notification-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: cli-audit-dict.yaml
docs/: audio-relay-setup.src  speak-and-continue.md
docs/sphinx/: backends.rst  conf.py  configuration.rst  env_vars.rst  index.rst  quickstart.rst
docs/sphinx/api/: backends.rst  mcp.rst  scitex_notification.rst
examples/: 00_run_all.sh  01_alert_demo.py  02_level_alerts.py  03_webhook_demo.py  04_phone_call_demo.py
examples/03_webhook_demo_out/FINISHED_SUCCESS/2026Y-05M-07D-12h01m41s_7i7Y-main/CONFIGS/: CONFIG.pkl  CONFIG.yaml
examples/04_phone_call_demo_out/FINISHED_SUCCESS/2026Y-05M-07D-12h02m01s_yjnR-main/CONFIGS/: CONFIG.pkl  CONFIG.yaml
src/scitex_notification/: __init__.py  __main__.py  _backends.py  _env_loader.py  _linter_plugin.py  _notify_legacy.py  mcp_server.py  telegram_channel.py
src/scitex_notification/_backends/: __init__.py  _audio.py  _config.py  _desktop.py  _emacs.py  _email.py  _matplotlib.py  _playwright.py  _telegram.py  _twilio.py  _types.py  _webhook.py
src/scitex_notification/_cli/: __init__.py  _helpers.py  _main.py  _mcp_cmds.py  _notify_cmds.py  _skills.py
src/scitex_notification/_mcp/: __init__.py  handlers.py  tool_schemas.py
src/scitex_notification/_skills/scitex-notification/: 01_installation.md  01_python-api.md  02_mcp-tools.md  02_quick-start.md  03_configuration.md  03_python-api.md  04_cli-reference.md  05_backends.md  20_env-vars.md  SKILL.md  backends.md  cli-reference.md  configuration.md
src/scitex_notification/_skills/scitex_notification/: backends.md  cli-reference.md  configuration.md  mcp-tools.md  python-api.md
src/scitex_notification/_sphinx_html/: .buildinfo  backends.html  configuration.html  env_vars.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
src/scitex_notification/_sphinx_html/.doctrees/: backends.doctree  configuration.doctree  env_vars.doctree  environment.pickle  index.doctree  quickstart.doctree
src/scitex_notification/_sphinx_html/.doctrees/api/: backends.doctree  mcp.doctree  scitex_notification.doctree
src/scitex_notification/_sphinx_html/_modules/: index.html  scitex_notification.html
src/scitex_notification/_sphinx_html/_modules/scitex_notification/: _backends.html  _notify_legacy.html  mcp_server.html
src/scitex_notification/_sphinx_html/_modules/scitex_notification/_backends/: _audio.html  _desktop.html  _emacs.html  _email.html  _matplotlib.html  _playwright.html  _telegram.html  _twilio.html  _types.html  _webhook.html
src/scitex_notification/_sphinx_html/_modules/scitex_notification/_mcp/: handlers.html  tool_schemas.html
src/scitex_notification/_sphinx_html/api/: backends.html  mcp.html  scitex_notification.html
src/scitex_notification/_templates/runtime/: README.md
src/scitex_notification/skills/: SKILL.md
tests/: __init__.py  conftest.py  test_api.py  test_backends.py  test_cli.py  test_config.py
tests/examples/: test_01_alert_demo.py  test_02_level_alerts.py  test_03_webhook_demo.py  test_04_phone_call_demo.py
tests/integration/: test_audio_backend_honors_speak_result.py  test_audio_edge.py  test_cli.py  test_cross_package_imports.py  test_explicit_backend_no_silent_fallback.py
tests/scitex_notification/: test__env_loader.py  test__notify_legacy.py
tests/scitex_notification/_backends/: test__audio_default.py  test__types.py
tests/scitex_notification/_cli/: test__helpers.py
tests/scitex_notification/_mcp/: test_tool_schemas.py
