[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-notification"
version = "0.2.5"
description = "Multi-backend notification system for SciTeX"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "notification",
    "alert",
    "sms",
    "email",
    "webhook",
    "scitex",
    "science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=8.0",
    "scitex_dev",
    "scitex-dev>=0.7.0",
]

[project.optional-dependencies]
audio = [
    "scitex-audio>=0.1.0",
]
mcp = [
    "mcp>=1.0",
]
playwright = [
    "playwright>=1.40",
]
twilio = [
    "twilio>=8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio",
    "ruff",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-notification[audio]",
    "scitex-notification[mcp]",
    "scitex-notification[playwright]",
    "scitex-notification[twilio]",
]

[project.scripts]
scitex-notification = "scitex_notification._cli:main"

[project.entry-points."scitex_linter.plugins"]
scitex_notification = "scitex_notification._linter_plugin:get_plugin"

[project.entry-points."scitex_dev.docs"]
scitex-notification = "scitex_notification"

[project.entry-points."scitex_dev.skills"]
scitex-notification = "scitex_notification"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-notification"
Repository = "https://github.com/ywatanabe1989/scitex-notification"
Documentation = "https://scitex-notification.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_notification"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--cov=scitex_notification --cov-report=term-missing --cov-report=html:tests/coverage"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["scitex_notification"]
omit = ["*/tests/*"]

[tool.coverage.report]
# Current coverage is 43%; 40 is the realistic floor while mcp_server and
# telegram_channel remain untested (require live transport mocking).
fail_under = 40

[tool.scitex_dev.audit]
# PS-168 — Per-package secret + env-var prefix in GitHub Actions workflows.
# `GH_PERSONAL_ACCESS_TOKEN` is the ecosystem-wide cross-cutting PAT used
# by the contributor-assistant CLA action. The natural GITHUB_* namespace
# is reserved by GitHub Actions on the secret-name surface (HTTP 422 on
# every `gh secret set`), so the GH_ shorthand is the canonical
# substitute and is registered ecosystem-wide via PR #122 on scitex-dev
# (EXCEPTION_SECRETS_DEFAULT). This per-package entry pins the same
# exception inline so the audit passes on every scitex-dev version,
# independent of release timing.
ps168_secret_exceptions = ["GH_PERSONAL_ACCESS_TOKEN"]
